Add initial jwt authentication
