# server/main.go
@@ -10,6 +10,7 @@ import (
 	"github.com/gofiber/fiber/v2/middleware/limiter"
 	"github.com/gofiber/fiber/v2/middleware/monitor"
 	"github.com/gofiber/fiber/v2/middleware/recover"
+	jwtmw "github.com/gofiber/jwt/v3"
 	"github.com/gofiber/swagger"
 	"github.com/jackc/pgx/v5/pgxpool"
 	"github.com/prometheus/client_golang/prometheus/promhttp"
@@ -30,13 +31,21 @@ func createPool(connStr string) *pgxpool.Pool {
 // TODO: Default should be replaced with required!
 type Config struct {
 	DbConnStr string `env:"TOPIC_DB_URI,default=postgresql://root:secret@localhost:5432/paiwr?sslmode=disable"`
+	JWTSecret string `env:"JWT_SECRET,default=secret"`
 }
 
 //	@title			Paiwr Server
 //	@version		1.0
 //	@description	Paiwr Server
-//	@host			localhost:8080
-//	@BasePath		/
+
+//	@host		localhost:8080
+//	@BasePath	/
+//	@schemes	http
+
+//	@securityDefinitions.apikey	BearerAuth
+//	@in							header
+//	@name						Authorization
+//	@description				Type "Bearer" followed by a space and JWT token.
 func main() {
 	var config Config
 	if err := envconfig.Process(context.Background(), &config); err != nil {
@@ -52,6 +61,7 @@ func main() {
 		},
 		Max: 20,
 	}))
+
 	app.Get("/swagger/*", swagger.HandlerDefault)
 	app.Static("/docs/spec", "docs/swagger.yaml")
 	app.Static("/docs", "docs/docs.html")
@@ -61,7 +71,7 @@ func main() {
 	pool := createPool(config.DbConnStr)
 
 	userRepo := user.NewPgRepo(pool)
-	userRoutes := user.NewRoutes(userRepo)
+	userRoutes := user.NewRoutes(userRepo, config.JWTSecret)
 
 	topicRepo := topic.NewPgRepo(pool)
 	topicRoutes := topic.NewRoutes(topicRepo)
@@ -76,12 +86,17 @@ func main() {
 	app.Post("/users/login", userRoutes.Login)
 	app.Post("/users/register", userRoutes.Register)
 	app.Get("/users/:id", userRoutes.FindByID)
-	app.Patch("/users/update-password", userRoutes.UpdatePassword)
 
-	app.Post("/topics", topicRoutes.Create)
 	app.Get("/topics/:id", topicRoutes.FindByID)
 	app.Get("/topics/owner/:id", topicRoutes.FindByOwnerID)
 	app.Get("/topics/pair/:id", topicRoutes.FindInvolved)
+
+	// Auth Required
+	app.Use(jwtmw.New(jwtmw.Config{SigningKey: []byte("secret")}))
+
+	app.Patch("/users/update-password", userRoutes.UpdatePassword)
+
+	app.Post("/topics", topicRoutes.Create)
 	app.Delete("/topics/:id", topicRoutes.Delete)
 
 	err := app.Listen(":8080")
